# VertLog

./: .gitignore  main.py  pyproject.toml  vertlog.sh
