[tool.poetry]
name = "vertlog"
version = "0.1.0"
description = ""
authors = ["Steven Duzevich <steven@duz.ie>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
pandas = "^2.1.3"
numpy = "^1.26.2"
lxml = "^4.9.3"
pick = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
